@@ -8,14 +8,28 @@
 package org.elasticsearch.xpack.esql.expression.function.fulltext;
 
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
+import org.elasticsearch.xpack.esql.action.EsqlCapabilities;
 import org.elasticsearch.xpack.esql.core.expression.predicate.fulltext.MatchQueryPredicate;
 import org.elasticsearch.xpack.esql.core.expression.predicate.fulltext.MultiMatchQueryPredicate;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class FullTextWritables {
 
     public static List<NamedWriteableRegistry.Entry> getNamedWriteables() {
-        return List.of(MatchQueryPredicate.ENTRY, MultiMatchQueryPredicate.ENTRY, QueryString.ENTRY, Match.ENTRY);
+        List<NamedWriteableRegistry.Entry> entries = new ArrayList<>();
+
+        entries.add(MatchQueryPredicate.ENTRY);
+        entries.add(MultiMatchQueryPredicate.ENTRY);
+        entries.add(QueryString.ENTRY);
+        entries.add(Match.ENTRY);
+
+        if (EsqlCapabilities.Cap.KQL_FUNCTION.isEnabled()) {
+            entries.add(Kql.ENTRY);
+        }
+
+        return Collections.unmodifiableList(entries);
     }
 }
